Fix alignment in pagination widget

--- a/corehq/apps/hqwebapp/static/app_manager/less/navigation.less
+++ b/corehq/apps/hqwebapp/static/app_manager/less/navigation.less
@@ -415,7 +415,3 @@ nav.appmanager-content {
     }
   }
 }
-
-.pagination-text {
-    margin: 17px 0;
-}
